--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "knex": "^0.19.1"
+    "knex": "^0.19.1",
+    "moment": "^2.24.0",
+    "pg": "^7.12.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
