--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.4.2",
     "knex": "^0.19.1",
     "moment": "^2.24.0",
     "pg": "^7.12.0"
