--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^14.4.2",
     "knex": "^0.19.1",
     "moment": "^2.24.0",
+    "path": "^0.12.7",
     "pg": "^7.12.0"
   },
   "devDependencies": {
